--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -20,6 +20,10 @@ Vagrant.configure("2") do |config|
   config.vm.define "coriander" do |sys|
     sys.vm.hostname = "coriander"
     sys.vm.network :private_network, ip: "192.168.56.69"
+    sys.vm.disk :disk, size: "1GB", name: "disk1"
+    sys.vm.disk :disk, size: "1GB", name: "disk2"
+    sys.vm.disk :disk, size: "1GB", name: "disk3"
+    sys.vm.disk :disk, size: "1GB", name: "disk4"
   end
 
   config.vm.provision "ansible" do |ansible|
