wip to setup kubernetes

--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,12 +1,12 @@
-[self]
+[paprika]
 192.168.56.68
 
-[box]
+[coriander]
 192.168.56.69
 
 [all:children]
-self
-box
+paprika
+coriander
 
 [all:vars]
 ansible_user=vagrant
