--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -8,7 +8,7 @@ Vagrant.configure("2") do |config|
   config.ssh.insert_key = false
   config.vm.synced_folder ".", "/vagrant", disabled: true
   config.vm.provider :virtualbox do |v|
-    v.memory = 512
+    v.memory = 2048
     v.linked_clone = true
   end
 
@@ -20,13 +20,13 @@ Vagrant.configure("2") do |config|
   config.vm.define "coriander" do |sys|
     sys.vm.hostname = "coriander"
     sys.vm.network :private_network, ip: "192.168.56.69"
-    sys.vm.disk :disk, size: "1GB", name: "disk1"
-    sys.vm.disk :disk, size: "1GB", name: "disk2"
-    sys.vm.disk :disk, size: "1GB", name: "disk3"
-    sys.vm.disk :disk, size: "1GB", name: "disk4"
+    sys.vm.disk :disk, size: "1GB", name: "b"
+    sys.vm.disk :disk, size: "1GB", name: "c"
+    sys.vm.disk :disk, size: "1GB", name: "d"
+    sys.vm.disk :disk, size: "1GB", name: "e"
   end
 
-  config.vm.provision "ansible" do |ansible|
-      ansible.playbook = "setup-lab.yml"
-  end
+  # config.vm.provision "ansible" do |ansible|
+  #     ansible.playbook = "setup-lab.yml"
+  # end
 end
