--- a/ansible/setup-lab.yml
+++ b/ansible/setup-lab.yml
@@ -7,7 +7,13 @@
     - knows-me
     - hardened
     - comfy
-    - dockerized
+
+- hosts: paprika
+  name: k8s head setup
+  become: true
+  
+  roles:
+    - kubed-head
 
 - hosts: coriander
   name: zfs-setup
