--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,12 +1,29 @@
-[paprika]
-192.168.56.68
+[hosts]
+homelab-thinkcentre ansible_host=192.168.56.68
+homelab-mainarray ansible_host=192.168.56.69
 
-[coriander]
-192.168.56.69
+[homelab_heads]
+homelab-thinkcentre 
 
-[all:children]
-paprika
-coriander
+[homelab_nodes]
+homelab-mainarray 
+
+[homelab_storage]
+homelab-mainarray
+
+[homelab:children]
+homelab_heads
+homelab_nodes
+homelab_storage
+
+[heads:children]
+homelab_heads
+
+[nodes:children]
+homelab_nodes
+
+[storage:children]
+homelab_storage
 
 [all:vars]
 ansible_user=vagrant
