--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -12,13 +12,13 @@ Vagrant.configure("2") do |config|
     v.linked_clone = true
   end
 
-  config.vm.define "paprika" do |sys|
-    sys.vm.hostname = "paprika"
+  config.vm.define "homelab-thinkcentre" do |sys|
+    sys.vm.hostname = "homelab-thinkcentre"
     sys.vm.network :private_network, ip: "192.168.56.68"
   end
 
-  config.vm.define "coriander" do |sys|
-    sys.vm.hostname = "coriander"
+  config.vm.define "homelab-mainarray" do |sys|
+    sys.vm.hostname = "homelab-mainarray"
     sys.vm.network :private_network, ip: "192.168.56.69"
     sys.vm.disk :disk, size: "1GB", name: "b"
     sys.vm.disk :disk, size: "1GB", name: "c"
