--- a/ansible/roles/knows-me/tasks/main.yml
+++ b/ansible/roles/knows-me/tasks/main.yml
@@ -10,10 +10,32 @@
     groups:
       - sudo
 
-- name: copy ssh key from keepass
-  viczem.keepass.attachment:
-      database: "{{ keepass_path }}"
-      password: "{{ keepass_pw }}"
-      entrypath: /root/personal/homelab/ssh/box
-      attachment: pubkey 
-      dest: /home/kwkaiser/.ssh/authorized_keys/box
+- name: create ssh dir if missing
+  ansible.builtin.file:
+    dest: /home/kwkaiser/.ssh/authorized_keys
+    mode: '0700'
+    state: directory 
+    owner: kwkaiser
+    group: kwkaiser
+
+- name: create keys dir if missing
+  ansible.builtin.file:
+    dest: /home/kwkaiser/.ssh/authorized_keys
+    mode: '0600'
+    state: directory 
+    owner: kwkaiser
+    group: kwkaiser
+
+- name: add empty homelab ssh key
+  ansible.builtin.file:
+    dest: /home/kwkaiser/.ssh/authorized_keys/box
+    mode: '0600'
+    owner: kwkaiser
+    group: kwkaiser 
+    state: touch
+
+- name: copy homelab ssh key content
+  ansible.builtin.lineinfile:
+    path: /home/kwkaiser/.ssh/authorized_keys/box
+    regexp: '.*'
+    line: "{{box_pubkey}}\n"
