--- a/ansible/setup-lab.yml
+++ b/ansible/setup-lab.yml
@@ -2,32 +2,27 @@
 - hosts: all 
   name: setup common utils shared on all
   become: true
-
-  vars_files:
-    - env.yml
-    - secrets.yml
-
   roles: 
     - knows-me
-    # - hardened
-    # - comfy
+    - hardened
+    - comfy
 
-# - hosts: homelab-mainarray
-#   name: setup zfs on storage array
-#   become: true
-#   vars_files:
-#     - zfs.yml
-#   roles: 
-#     - mrlesmithjr.zfs
+- hosts: homelab-mainarray
+  name: setup zfs on storage array
+  become: true
+  vars_files:
+    - zfs.yml
+  roles: 
+    - mrlesmithjr.zfs
 
-# - hosts: heads
-#   name: setup kubernetes cluster head
-#   become: true
-#   roles:
-#     - kubed-head
+- hosts: heads
+  name: setup kubernetes cluster head
+  become: true
+  roles:
+    - kubed-head
 
-# - hosts: nodes
-#   name: setup kubernetes cluster nodes
-#   become: true 
-#   roles:
-#     - kubed-node
+- hosts: nodes
+  name: setup kubernetes cluster nodes
+  become: true 
+  roles:
+    - kubed-node
