--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,6 @@
 [defaults]
-inventory = hosts.ini
-host_key_checking = False
+inventory = config/devtest-hosts.ini
+host_key_checking = false
 hash_behaviour = merge
+ask_vault_pass = true
+vault_password_file = vars/devtest-secrets.yml
