--- a/ansible/roles/kubed-node/tasks/main.yml
+++ b/ansible/roles/kubed-node/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: create dir to denote cluster info
   ansible.builtin.file:
-    path: /home/kwkaiser/kube-init
+    path: /home/kwkaiser/.kube-init
     state: directory
     mode: '0777'
 
 - name: join cluster
-  shell: "{{ hostvars['homelab-thinkcentre']['kube_join_cluster_command']['stdout'] }} && touch /home/kwkaiser/kube-init/joined"
+  shell: "{{ hostvars['homelab-thinkcentre']['kube_join_cluster_command']['stdout'] }} && touch /home/kwkaiser/.kube-init/joined"
   args:
-    creates: /home/kwkaiser/kube-init/joined
+    creates: /home/kwkaiser/.kube-init/joined
