--- a/ansible/roles/kubed/tasks/main.yml
+++ b/ansible/roles/kubed/tasks/main.yml
@@ -38,19 +38,12 @@
     create: yes
     line: KUBELET_EXTRA_ARGS=--node-ip={{ ansible_host }}
 
-- name: enable / restart kubelet
+- name: start kubelet
   ansible.builtin.systemd:
     name: kubelet
     daemon_reload: true
     enabled: true
-    state: restarted
-
-- name: remove containerd config
-  ansible.builtin.file:
-    path: /etc/containerd/config.toml
-    state: absent
-
-- name: restart containerd
-  ansible.builtin.systemd:
-    name: containerd
-    state: restarted
+    state: started
+  notify:
+    - clear containerd config
+    - restart containerd
