notifies giving me grief

--- a/ansible/roles/kubed/handlers/main.yml
+++ b/ansible/roles/kubed/handlers/main.yml
@@ -1,10 +1,11 @@
 ---
-- name: clear containerd config
-  ansible.builtin.file:
-    path: /etc/containerd/config.toml
-    state: absent
-
 - name: restart containerd
   ansible.builtin.systemd:
     name: containerd
     state: restarted
+
+- name: containerd config 
+  ansible.builtin.file:
+    path: /etc/containerd/config.toml
+    state: absent
+  notify: restart containerd
