--- a/ansible/roles/kubed-head/tasks/main.yml
+++ b/ansible/roles/kubed-head/tasks/main.yml
@@ -1,16 +1,10 @@
 ---
-- name: create dir to denote creation of cluster
-  ansible.builtin.file:
-    path: /home/kwkaiser/.kube-init
-    state: directory
-    mode: '0777'
-
 - name: initialize k8s cluster using kubeadm
   shell: | 
     kubeadm init --apiserver-advertise-address="{{ ansible_host }}" --apiserver-cert-extra-sans="{{ ansible_host }}" --node-name "{{ ansible_hostname }}" --pod-network-cidr="{{ ansible_host.split('.')[:-1] | join('.') }}.0/16"
-    touch /home/kwkaiser/.kube-init/cluster
+    touch "{{ki_cluster}}"
   args:
-    creates: /home/kwkaiser/.kube-init/cluster
+    creates: "{{ki_cluster}}"
 
 - name: setup kubeconfig for main user
   shell: | 
@@ -24,24 +18,24 @@
   become_user: kwkaiser
   shell: | 
     kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/tigera-operator.yaml 
-    touch /home/kwkaiser/.kube-init/network-add
+    touch "{{ki_network_add}}"
   args:
-    creates: /home/kwkaiser/.kube-init/network-add
+    creates: "{ki_network_add}}"
 
 
 - name: create calico as resource
   become_user: kwkaiser
   shell: | 
     kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/custom-resources.yaml 
-    touch /home/kwkaiser/.kube-init/network-create
+    touch "{{ki_network_create}}"
   args:
-    creates: /home/kwkaiser/.kube-init/network-create
+    creates: "{{ki_network_create}}"
 
 - name: remove taint from head node
   become_user: kwkaiser
   shell: |
     kubectl taint nodes --all node-role.kubernetes.io/control-plane- 
-    touch /home/kwkaiser/.kube-init/node-untaint
+    touch "{{ki_untaint}}"
   args:
     creates: /home/kwkaiser/.kube-init/node-untaint
 
