--- a/ansible/roles/kubed-node/tasks/main.yml
+++ b/ansible/roles/kubed-node/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: join cluster
-  shell: "{{ hostvars['homelab-thinkcentre']['kube_join_cluster_command']['stdout'] }} && touch {{ki_joined}}"
+- name: Join cluster
+  ansible.builtin.shell: "{{ hostvars['homelab-thinkcentre']['kube_join_cluster_command']['stdout'] }} && touch {{ ki_joined }}"
   args:
-    creates: "{{ki_joined}}"
+    creates: "{{ ki_joined }}"
