--- a/ansible/roles/dockerized/tasks/main.yml
+++ b/ansible/roles/dockerized/tasks/main.yml
@@ -3,12 +3,12 @@
 - name: install packages to use apt over https
   ansible.builtin.apt:
     state: present
-    update_cache: yes
+    update_cache: true
     name:
-      - ca-certificates 
-      - curl 
-      - gnupg 
-      - lsb-release 
+      - ca-certificates
+      - curl
+      - gnupg
+      - lsb-release
 
 - name: add docker key
   apt_key:
@@ -21,15 +21,15 @@
     state: present
 
 - name: install docker & deps
-  apt: 
+  apt:
     state: present
-    update_cache: yes
+    update_cache: true
     name:
-      - docker-ce 
-      - docker-ce-cli 
-      - containerd.io 
-      - docker-buildx-plugin 
-      - docker-compose-plugin 
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-buildx-plugin
+      - docker-compose-plugin
 
 - name: add main user to docker
   user:
