--- a/ansible/roles/knows-me/tasks/main.yml
+++ b/ansible/roles/knows-me/tasks/main.yml
@@ -1,6 +1,6 @@
 # Has my account & relevant details
 ---
-- name: create main user
+- name: Create main user
   ansible.builtin.user:
     name: kwkaiser
     state: present
@@ -10,24 +10,24 @@
     groups:
       - sudo
 
-- name: create ssh dir if missing
+- name: Create ssh dir if missing
   ansible.builtin.file:
     dest: /home/kwkaiser/.ssh
-    mode: '0700'
-    state: directory 
+    mode: "0700"
+    state: directory
     owner: kwkaiser
     group: kwkaiser
 
-- name: create keys dir if missing
+- name: Create keys dir if missing
   ansible.builtin.file:
     dest: /home/kwkaiser/.ssh/authorized_keys
-    mode: '0600'
+    mode: "0600"
     state: touch
     owner: kwkaiser
     group: kwkaiser
 
-- name: copy homelab ssh key content
+- name: Copy homelab ssh key content
   ansible.builtin.lineinfile:
     path: /home/kwkaiser/.ssh/authorized_keys
-    regexp: '.*'
-    line: "{{box_pubkey}}\n"
+    regexp: ".*"
+    line: "{{ box_pubkey }}\n"
